--- a/pratice/public/style.css
+++ b/pratice/public/style.css
@@ -1,26 +1,3 @@
-<template>
-  <TheHeader></TheHeader>
-
-  <main>
-    <router-view></router-view>
-  </main>
-
-  <TheFooter></TheFooter>
-</template>
-
-<script>
-import TheHeader from "./components/navigation/TheHeader.vue";
-import TheFooter from "./components/navigation/TheFooter.vue";
-
-export default {
-  components: {
-    TheHeader,
-    TheFooter,
-  },
-};
-</script>
-
-<style>
 * {
   margin: 0;
   padding: 0;
@@ -47,9 +24,6 @@ main {
 section {
   font-size: 16px;
 }
-label {
-  color: #555;
-}
 
 .list-move,
 .list-enter-active,
@@ -65,4 +39,23 @@ label {
   position: absolute !important;
 }
 
-</style>
+.base-button {
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 0 0.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  color: #568;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 5px 0 #ddd;
+}
+.base-button:hover {
+  color: #59a;
+  box-shadow: inset 0 1px 5px 0 #ddd;
+}
+.base-button.active {
+  color: #568;
+  background-color: #aef3;
+  box-shadow: inset 0 1px 5px 0 #ddd;
+}
